# ai-engineering-bootcamp-prerequisites

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/: retrieval_generation.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/chatbot_ui/: pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/Amazon-items-collection-00/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/Amazon-items-collection-00/0/segments/8bdf3445-d9ac-43d0-b2ef-0cabe1a32f42/: mutable_id_tracker.mappings
qdrant_storage/collections/Amazon-items-collection-00/0/segments/9403d753-b7b6-4da2-981e-483a656f0291/: mutable_id_tracker.mappings
src/: app.py
